--- a/Color Viewer/MainWindow.xaml
+++ b/Color Viewer/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Color_Viewer"
         mc:Ignorable="d"
         Title="Color Viewer"
-        MinHeight="395" Height="395"
+        MinHeight="435" Height="435"
         MinWidth="550" Width="550"
         d:DataContext="{d:DesignInstance Type=local:ViewModel}"
         BorderThickness="0,0,0,3">
@@ -20,6 +20,7 @@
             <RowDefinition MinHeight="150" Height="150"/>
             <RowDefinition MinHeight="70" Height="70"/>
             <RowDefinition MinHeight="175" Height="*"/>
+            <RowDefinition MinHeight="50" Height="*"/>
         </Grid.RowDefinitions>
         <!--#endregion-->
         
@@ -47,7 +48,7 @@
                    Content="A:"
                    Height="Auto" Width="Auto"
                    FontSize="25" FontWeight="ExtraBold"
-                   Padding="0,0,0,5" MouseDoubleClick="Label_MouseDoubleClick"/>
+                   Padding="0,0,0,5"/>
             <Label Grid.Row="0" Grid.Column="0"
                    HorizontalAlignment="Center" VerticalAlignment="Center"
                    Content="R:"
@@ -71,12 +72,13 @@
             <Slider Name="sliderRedChannel"
                     Grid.Column="1" Grid.Row="0"
                     Margin="5,0,5,0" Height="Auto"
-                    Delay="1" Interval="1"
-                    TickPlacement="Both" TickFrequency="10"
                     VerticalAlignment="Center" HorizontalContentAlignment="Stretch"
+                    Delay="1" Interval="1"
                     Minimum="0" Maximum="255"
+                    TickPlacement="Both" TickFrequency="10"
+                    AutoToolTipPlacement="BottomRight"
                     Cursor="Hand"
-                    Value="{Binding Path=SelectedColor.Red}" AutoToolTipPlacement="BottomRight"/>
+                    Value="{Binding Path=SelectedColor.Red}"/>
             <Slider Name="sliderGreenChannel"
                     Grid.Column="1" Grid.Row="1"
                     Margin="5,0,5,0"
@@ -169,9 +171,7 @@
             <!--#endregion-->
             
             <!--#region <Current color Displaying>-->
-            <Border Name="borderColorDisplay" Grid.Column="3" Grid.RowSpan="4" Margin="5"
-                    MouseLeftButtonDown="borderColorDisplay_MouseLeftButtonDown"
-                    CornerRadius="15">
+            <Border Name="borderColorDisplay" Grid.Column="3" Grid.RowSpan="4" Margin="5"  CornerRadius="10">
                 <Border.Background>
                     <SolidColorBrush Color="{Binding Path=SelectedColor.SystemColor, Mode=OneWay}"></SolidColorBrush>
                 </Border.Background>
@@ -185,32 +185,41 @@
         <!--<StackPanel Name="stackPanelButtons" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Left" Grid.ColumnSpan="2" Margin="25,0,0,0">
             
         </StackPanel>-->
+        <Button x:Name="buttonTest" Grid.Row="1"
+                HorizontalAlignment="Center" VerticalAlignment="Stretch"
+                Margin="5"
+                Content="TEST ME" FontSize="25" FontWeight="SemiBold"
+                Command="{Binding TestCmd, Mode=OneWay}"/>
         <Button x:Name="buttonAdd" Grid.Row="1"
-                Width="200" Height="50"
-                HorizontalAlignment="Center"
-                Margin="0,0,200,0"
+                HorizontalAlignment="Left" VerticalAlignment="Center"
+                Margin="50,0,300,0"
                 FontSize="25" FontWeight="SemiBold"
                 Content="Add"
-                Click="buttonAdd_Click"/>
+                Command="{Binding DuplicateColorCmd}"/>
         <Button x:Name="buttonRemove" Grid.Row="1"
-                Width="200" Height="50"
-                HorizontalAlignment="Stretch"
-                Margin="200,0,0,0"
+                HorizontalAlignment="Right" VerticalAlignment="Center"
+                Margin="300,0,50,0"
                 FontSize="25" FontWeight="SemiBold"
                 Content="Remove"
-                Click="buttonRemove_Click"/>
-        <DockPanel Grid.Row="1" HorizontalAlignment="Stretch"></DockPanel>
+                Command="{Binding Path=RemoveColorCmd}"/>
         <!--#endregion-->
         
         <!--#region <BOTTOM: ListBox with saved colors>-->
         <ListBox
             Name="colorsListBox" Grid.Row="2"
             ItemsSource="{Binding Colors}"
-            SelectedItem="{Binding SelectedColor, Mode=OneWayToSource}"
+            SelectedItem="{Binding SelectedColor}"
             DisplayMemberPath="Code"
             Background="#FFE8E8E8"
             HorizontalContentAlignment="Stretch" Grid.ColumnSpan="2">
         </ListBox>
         <!--#endregion-->
+        <DockPanel Grid.Row="3">
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="Color">
+                    <MenuItem Command="{Binding TestCmd}" Header="Copy" InputGestureText="REALLY???"/>
+                </MenuItem>
+            </Menu>
+        </DockPanel>
     </Grid>
 </Window>
