--- a/ColorViewer_Final/MainWindow.xaml
+++ b/ColorViewer_Final/MainWindow.xaml
@@ -10,8 +10,9 @@
         MinHeight="435" Height="445"
         MinWidth="550" Width="550"
         Background="#FF888888">
+    <!--#region [ WINDOW RESOURCES ]-->
     <Window.Resources>
-        <!--Default Style for Labels-->
+        <!--#region [Default Style for Labels]-->
         <Style TargetType="{x:Type Label}">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
@@ -27,8 +28,8 @@
             <Setter Property="CornerRadius" Value="7,0,0,7"/>
             <Setter Property="Margin" Value="2,2,0,2"/>
         </Style>
-
-        <!--Default Style for Sliders-->
+        <!--#endregion-->
+        <!--#region [Default Style for Sliders]-->
         <Style TargetType="{x:Type Slider}">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
@@ -49,15 +50,16 @@
             <Setter Property="CornerRadius" Value="0,0,0,0"/>
             <Setter Property="Margin" Value="0,2,0,2"/>
         </Style>
-
-        <!--Default Style for TextBoxes-->
+        <!--#endregion-->
+        <!--#region [Default Style for TextBoxes]-->
         <Style TargetType="{x:Type TextBox}">
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
             <Setter Property="VerticalAlignment" Value="Stretch"/>
-            <Setter Property="HorizontalContentAlignment" Value="Center"/>
+            <!--<Setter Property="HorizontalContentAlignment" Value="Center"/>-->
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="FontSize" Value="28"/>
-            <Setter Property="Padding" Value="-1,0,0,0"/>
+            <Setter Property="TextAlignment" Value="Center"/>
+            <Setter Property="Padding" Value="-1,-1,0,0"/>
             <Setter Property="FontFamily" Value="Russo One"/>
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
@@ -74,19 +76,21 @@
             </Setter>
             <Setter Property="Margin" Value="0,2,0,2"/>
         </Style>
+        <!--#endregion-->
     </Window.Resources>
-
+    <!--#endregion-->
+ 
     <!--[ MAIN GRID ]-->
     <Grid UseLayoutRounding="True">
-        <!--#region [GRID DEFINITIONS]-->
+        <!--#region ===[GRID DEFINITIONS]===-->
         <Grid.RowDefinitions>
             <RowDefinition MinHeight="168" Height="168"/>
             <RowDefinition MinHeight="70" Height="70"/>
             <RowDefinition MinHeight="160" Height="*"/>
         </Grid.RowDefinitions>
         <!--#endregion-->
-
-        <!--[ COLOR PICKER GRID ]-->
+        
+        <!--#region [ COLOR PICKER GRID ]-->
         <Grid Grid.Row="0" ShowGridLines="False" Margin="0,1,0,-2">
             <!--#region [GRID DEFINITIONS]-->
             <Grid.RowDefinitions>
@@ -103,62 +107,132 @@
             </Grid.ColumnDefinitions>
             <!--#endregion-->
             <!--#region [LABELS]-->
+            <!--#region { Red }-->
             <Border Grid.Row="0" Grid.Column="0" Style="{StaticResource labelBorderStyle}" Background="Red">
                 <Label Content="R"/>
             </Border>
+            <!--#endregion-->
+            <!--#region { Green }-->
             <Border Grid.Row="1" Grid.Column="0" Style="{StaticResource labelBorderStyle}"  Background="Green">
                 <Label Content="G"/>
             </Border>
+            <!--#endregion-->
+            <!--#region { Blue }-->
             <Border Grid.Row="2" Grid.Column="0" Style="{StaticResource labelBorderStyle}" Background="Blue">
                 <Label Content="B"/>
             </Border>
+            <!--#endregion-->
+            <!--#region { Alpha }-->
             <Border Grid.Row="3" Grid.Column="0" Style="{StaticResource labelBorderStyle}" Background="AntiqueWhite">
                 <Label Content="A"/>
             </Border>
             <!--#endregion-->
+            <!--#endregion-->
             <!--#region [SLIDERS]-->
+            <!--#region { Red }-->
             <Border Grid.Row="0" Grid.Column="1" Style="{StaticResource sliderBorderStyle}">
-                <Slider/>
+                <Slider Value="{Binding Path=SelectedColor.Red, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Border>
+            <!--#endregion-->
+            <!--#region { Green }-->
             <Border Grid.Row="1" Grid.Column="1" Style="{StaticResource sliderBorderStyle}">
-                <Slider/>
+                <Slider Value="{Binding Path=SelectedColor.Green, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Border>
+            <!--#endregion-->
+            <!--#region { Blue }-->
             <Border Grid.Row="2" Grid.Column="1" Style="{StaticResource sliderBorderStyle}">
-                <Slider/>
+                <Slider Value="{Binding Path=SelectedColor.Blue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Border>
+            <!--#endregion-->
+            <!--#region { Alpha }-->
             <Border Grid.Row="3" Grid.Column="1" Style="{StaticResource sliderBorderStyle}">
-                <Slider/>
+                <Slider Value="{Binding Path=SelectedColor.Alpha, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </Border>
+            <!--#endregion-->
             <!--#endregion-->
             <!--#region [TEXTBOXES]-->
+            <!--#region { Red }-->
             <Border Grid.Column="2" Grid.Row="0" Style="{StaticResource textboxBorderStyle}">
-                <TextBox VerticalAlignment="Center" HorizontalAlignment="Stretch">255</TextBox>
-            </Border>
-            <Border Grid.Column="2" Grid.Row="1" Style="{StaticResource textboxBorderStyle}">
-                <TextBox>255</TextBox>
-            </Border>
-            <Border Grid.Column="2" Grid.Row="2" Style="{StaticResource textboxBorderStyle}">
-                <TextBox>255</TextBox>
-            </Border>
-            <Border Grid.Column="2" Grid.Row="3" Style="{StaticResource textboxBorderStyle}">
-                <TextBox>255</TextBox>
+                <TextBox Text="{Binding Path=SelectedColor.Red, UpdateSourceTrigger=PropertyChanged}" SelectionOpacity="0.6"/>
+                <!--<TextBox Text="255"/>-->
             </Border>
             <!--#endregion-->
+            <!--#region { Green }-->
+            <Border Grid.Column="2" Grid.Row="1" Style="{StaticResource textboxBorderStyle}">
+                <TextBox Text="{Binding Path=SelectedColor.Green, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </Border>
+            <!--#endregion-->
+            <!--#region { Blue }-->
+            <Border Grid.Column="2" Grid.Row="2" Style="{StaticResource textboxBorderStyle}">
+                <TextBox Text="{Binding Path=SelectedColor.Blue, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </Border>
+            <!--#endregion-->
+            <!--#region { Alpha }-->
+            <Border Grid.Column="2" Grid.Row="3" Style="{StaticResource textboxBorderStyle}">
+                <TextBox Text="{Binding Path=SelectedColor.Alpha, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </Border>
+            <!--#endregion-->
+            <!--#endregion-->
             <!--#region [COLOR DISPLAY]-->
-            <Border Grid.Column="3" Grid.Row="0" Grid.RowSpan="4" BorderThickness="3" BorderBrush="Black" CornerRadius="6" Margin="2">
+            <Border x:Name="BorderDisplayedColor" Grid.Column="3" Grid.Row="0" Grid.RowSpan="4" BorderThickness="3" BorderBrush="Black" CornerRadius="6" Margin="2">
                 <Border.Background>
-                    <SolidColorBrush Color="Transparent"></SolidColorBrush>
+                    <SolidColorBrush Color="{Binding Path=SelectedColor.SystemColor, Mode=OneWay}"/>
                 </Border.Background>
             </Border>
             <!--#endregion-->
         </Grid>
-        <StackPanel Grid.Row="1" Background="Black"></StackPanel>
-        <!--#region [COLORS LISTBOX]-->
+        <!--#endregion-->
+        <!--#region [ CONTROLL BUTTONS ]-->
+        <WrapPanel Grid.Row="1" Background="Transparent">
+            <Button Command="{Binding CopyColorCmd}" Background="#FF7EC97E" Margin="20,20,20,5">Add/Copy</Button>
+        </WrapPanel>
+        <!--#endregion-->
+        <!--#region [ SAVED COLORS LISTBOX ]-->
         <Border Grid.Row="2" BorderThickness="3" BorderBrush="Black" CornerRadius="10" Margin="2,0,2,2">
             <Border.Background>
                 <SolidColorBrush Color="White"></SolidColorBrush>
             </Border.Background>
-            <ListBox Background="Transparent" BorderBrush="Transparent"></ListBox>
+            
+            <!--OLD LISTBOX--><!--
+            <ListBox ItemsSource="{Binding Colors}"
+                     SelectedItem="{Binding SelectedColor, Mode=OneWayToSource}"
+                     DisplayMemberPath="Code"
+                     Background="Transparent"
+                     BorderBrush="Transparent">
+            </ListBox>-->
+            <ListBox Name="contactListBox"
+                     ItemsSource="{Binding Colors}"
+                     SelectedItem="{Binding Path=SelectedColor}"
+                     Grid.Column="0" Background="#FF92CEE9"
+                     HorizontalContentAlignment="Stretch">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition/>
+                                <RowDefinition/>
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <Border HorizontalAlignment="Left" Grid.RowSpan="2" Width="40" Height="40" CornerRadius="50">
+                                <Border.Background>
+                                    <SolidColorBrush Color="Black"/>
+                                </Border.Background>
+                            </Border>
+                            <DockPanel Grid.Column="1" Grid.Row="0">
+                                <TextBlock Text="HEX: " FontWeight="Light"></TextBlock>
+                                <TextBlock Text="{Binding Hex}" FontSize="18" FontWeight="Bold"></TextBlock>
+                            </DockPanel>
+                            <DockPanel Grid.Column="1" Grid.Row="1" LastChildFill="False">
+                                <TextBlock Text="RGBA: " FontWeight="Light"></TextBlock>
+                                <TextBlock Text="{Binding RGBA}" FontWeight="DemiBold" ></TextBlock>
+                            </DockPanel>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Border>
         <!--#endregion-->
     </Grid>
